--- a/main/project/css/home_works.css
+++ b/main/project/css/home_works.css
@@ -35,8 +35,9 @@
 }
 
 .parent_block {
-    height: 500px;
-    width: 500px;
+    background: url(../images/field-football.jpg);
+    height: 599px;
+    width: 895px;
     border: 1px solid var(--orange);
     position: relative;
     margin: 0 auto;
@@ -182,7 +183,7 @@
 .time_block {
     display: flex;
     width: 500px;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .stopwatch {
