--- a/main/project/css/style.css
+++ b/main/project/css/style.css
@@ -166,12 +166,13 @@
 /* MODAL */
 
 .modal {
+    margin-bottom: 10px;
     position: fixed;
     height: 100%;
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 1000;
     background: rgba(0, 0, 0, 0.8);
     display: none;
 }
